--- a/src/main/webapp/static/book/5DefaultNodeRegistration/5.md
+++ b/src/main/webapp/static/book/5DefaultNodeRegistration/5.md
@@ -1,36 +1,42 @@
 # <font color=Black>Register Default Node</font>
 
+	
+After the Node registration, you will receive incentives by the Node Establishment Incentive Program. And you can also monitor the status of the node at any time in your Data Center Management System.
 
-After registering in the Spartan Node Management Contract, you will be able to normally receive incentives from the NTT economic system and potential various rewards from the Spartan Foundation. And you can also monitor the status of the node at any time in your Data Center Management System.
+
 
 <br/>
 
 ## <font color=Black><span id="1">Submit the registration application</span></font>
 ---
 
-Use your Data Center Management System for node registration, and the management system will call the Spartan Node Management Contract to register your node information on the chain. Choose NC Ethereum as the target chain.
+Use your Data Center Management System for node registration, and the management system will call the Spartan Node Management Contract to register your node information on the chain. Choose Spartan-I as the target chain.
 
-**Log in to the BSN Spartan Data Center Software, click on "Node Management"-> "Node Info" on the panel and open the page:**
+### <font color=Black>Operation Steps:</font>
+
+
+**Click "Node Management"-> "Node Info" on the panel to enter the page:**
 
 <img src='img/Submittheregistrationapplication1.png' style='width:600px;' alt='Submittheregistrationapplication1' title='Submittheregistrationapplication1'>
 
-**Click "Register "button:**
+**Click "Register"button:**
 
 <img src='img/Submittheregistrationapplication2.png' style='width:600px;' alt='Submittheregistrationapplication2' title='Submittheregistrationapplication2'>
 
 - Select Chain Name: Choose Spartan-I as the target chain;
 
-- Enter the Node ID；
+- Enter the Node ID which is generated at the Node deployment；
 
-- Enter the Node Address；
+- Enter the Node Address which is generated at the Node deployment；
 
-- Enter Signature；
+- Enter Signature which is generated at the Node deplyment；
 
-- Enter the RPC URL, you can monitor the status of the node at any time in your Data Center Software；
+- Enter the RPC URL, for the node monitoring service；
 
-- Supply the key store password；
+- Supply the keystore password；
 
-- Click the **"Submit"** button, the backend timing task will submit the node information to the chain directly and wait for the chain to carry out the Node Registration Test, we will send the result to the Data Center’s email address. 
+- Click the "Submit" button, the backend timing task will submit the node information to the chain directly and wait for the chain to carry out the Node Registration Test (This will normally takes several hours but no more than 10 hours), we will send the result to the Data Center’s email address. 
+
 
 
 <br/>
@@ -38,7 +44,8 @@ Use your Data Center Management System for node registration, and the management
 ## <font color=Black><span id="2">Check the email of the Notification of Submission</span></font>
 ---
 
-You will receive an email letting you know if your application was submitted successfully. If successful, your node will be tested for registration; if it fails, please resubmit the application.
+You will receive an email to inform you if your application was successfully submitted . If it is successful, your node will be tested for registration; if it fails, please resubmit the application.
+
 
 <br/>
 
@@ -47,16 +54,22 @@ You will receive an email letting you know if your application was submitted suc
 
 Keep your node in a state of stable connection to the network. If your node fails to pass the test, please check your node and network status, you can submit the application again for another test.
 
+
 <br/>
 
 ## <font color=Black><span id="4">Check your Node Management List and your Node Status</span></font>
 ---
 
+	
 Now your node information has been recorded on the chain, and you can find your node in the Node Management List.
 
-**Log in to the BSN Spartan Data Center Software, click on "Node Management"-> "Node Info" on the panel and open the page:**
+### <font color=Black>Operation Steps:</font>
+
+**Click "Node Management"-> "Node Info" on the panel to enter the page:**
+
 
 In the list of nodes, you will see the status of all registered nodes. Node search function is also available.
+
 
 
 <img src='img/CheckyourNodeManagementList.png' style='width:600px;' alt='CheckyourNodeManagementList' title='CheckyourNodeManagementList'>
@@ -68,12 +81,15 @@ In the list of nodes, you will see the status of all registered nodes. Node sear
 
 Node Establishment Incentive will be sent to your NTT Wallet.
 
-**Log in to the BSN Spartan Data Center Software, click on "Home" on the panel and open the page, check your NTT Balance.**
+
+### <font color=Black>Operation Steps:</font>
+
+**Click "Home" on the panel to enter the page, check your NTT Balance.**
 
 
 <img src='img/NTTBalance.png' style='width:600px;' alt='NTTBalance' title='NTTBalance'>
 
-**You can also click "NTT History" to view the page:**
+**You can also click "NTT History" to view transactions history of the NTT Wallet:**
 
 
 <img src='img/NTTHistory.png' style='width:600px;' alt='NTTHistory' title='NTTHistory'>
