--- a/src/main/webapp/static/book/7GasCreditTop-up/7.md
+++ b/src/main/webapp/static/book/7GasCreditTop-up/7.md
@@ -1,17 +1,21 @@
 # <font color=Black>Top-Up Gas Credit</font>
 
+	 
+Any Wallet in the Non-Cryptocurrency Public Chains needs to consume Gas Credit when initiating a transaction. For example, if your user want to initiate a transaction, his/her chain Wallet needs to consume Gas Credit. At this time, you can use your NTT balance to Top-up the Gas Credit of this chain Wallet to ensure that the transaction can proceed normally.	
 
-
-Any Wallet in the Non-Cryptocurrency Public Chains needs to consume Gas Credit when initiating a transaction. For example, if your user want to initiate a transaction, his/her chain Wallet needs to consume Gas Credit. At this time, you can use your NTT balance to Top-up the Gas Credit of this chain Wallet to ensure that the transaction can proceed normally.
 
 <br/>
 
 ## <font color=Black><span id="1">Submit the Gas Credit Top-up Transaction (Manually Via Management)</span></font>
 ---
 
-You can Top-up Gas Credit through your management system. Please make sure that the target Wallet is correctly. If the target Wallet is incorrect but the transaction is successfully executed, the transaction can not be rolled back.
 
-**Log in to the BSN Spartan Data Center Software, click on "Gas Credit Management" on the panel and open the page:**
+You can Top-up Gas Credit through your management system. Please make sure that the target Wallet is correct, if the target Wallet is incorrect but the transaction is successfully executed, the transaction can not be rolled back.
+
+### <font color=Black>Operation Steps:</font>
+
+**Click on "Gas Credit Management" on the panel to enter the page:**
+
 
 <img src='img/top-upGasCredit1.png' style='width:600px;' alt='top-upGasCredit1' title='top-upGasCredit1'>
 
@@ -24,7 +28,7 @@ You can Top-up Gas Credit through your management system. Please make sure that 
 ## <font color=Black><span id="2">Submit the Gas Credit Top-up Transaction (Call Smart Contract)</span></font>
 ---
 
-If you are very familiar with the use of blockchain and smart contracts, you can also choose to directly call our official smart contract for Gas Credit Top-up.
+If you are very familiar with the use of blockchain and smart contracts, you can also choose to directly call our official smart contract for Gas Credit Top-up. Check the [Spartan Gas Credit Governance Contract](https://spartan.bsn.foundation/static/quick-start/2gettingStarted/2-2-4.html) for details.
 
 
 
@@ -33,9 +37,14 @@ If you are very familiar with the use of blockchain and smart contracts, you can
 ## <font color=Black><span id="3">Check the Transaction Information</span></font>
 ---
 
-If the Top-up is successful, you will be able to check the transaction in the Top-up list. Otherwise, your NTT balance will be refunded. Since the transaction takes place on the chain, there will be a certain delay for reaching a consensus, please be patient.
 
-**Log in to the BSN Spartan Data Center Software, click on "Gas Credit Management" on the panel and open the page:**
+If the Top-up is successful, you will be able to check the transaction in the Top-up list. Otherwise, your NTT balance will be refunded. Since the transaction takes place on the chain, there will be a certain delay for reaching a consensus, please be patient.	
+
+
+### <font color=Black>Operation Steps:</font>
+
+**Click "Gas Credit Management" on the panel to enter the page:**
+
 
 <img src='img/GasCreditRecords.png' style='width:600px;' alt='GasCreditRecords' title='GasCreditRecords'>
 
@@ -45,13 +54,17 @@ If the Top-up is successful, you will be able to check the transaction in the To
 ## <font color=Black><span id="4">Check the NTT Refund</span></font> 
 ---
 
-> [!warning|style:flat]
 
-> <font color=red>If Top-up Failed.</font>**Please make sure your NTT is correctly refunded.**
+> [!danger|style:flat]
+
+> ***<font color=red>If Top-up Failed.Please make sure your NTT is correctly refunded.</font>***
 
 <br/>
 
-**Log in to the BSN Spartan Data Center Software, click on "Home" on the panel and open the page, check your NTT Balance.**
+
+## <font color=Black>Operation Steps:</font> 
+
+**Click "Home" on the panel to enter the page, check your NTT Balance.**
 
 
 <img src='img/NTTBalance.png' style='width:600px;' alt='NTTBalance' title='NTTBalance'>
