--- a/src/main/webapp/static/book/9ListofDailyCommonOperations/9.md
+++ b/src/main/webapp/static/book/9ListofDailyCommonOperations/9.md
@@ -5,30 +5,33 @@
 ## <font color=Black><span id="1">Node Status Monitoring</span></font>
 ---
 
+		
 Monitor your node status at any time to ensure that the node is in a normal state.
 
+### <font color=Black>Operation Steps:</font>
 
-**Log in to the BSN Spartan Data Center Software, click on "Home" on the panel and open the page:**
+**Click "Home" on the panel to enter the dashboard:**
+
 
 <img src='img/NodeStatusMonitoring.png' style='width:600px;' alt='NodeStatusMonitoring' title='NodeStatusMonitoring'>
 
 
 <br/>
 
-## <font color=Black><span id="2">Node Status Monitoring</span></font>
+## <font color=Black><span id="2">NTT Wallet Balance Monitoring</span></font>
 ---
 
 Monitor your NTT Wallet balance information at any time to avoid transaction failure caused by low balance. If your NTT Wallet’s Gas Credit balance is too low to make a normal transaction, you can use the Emergency Gas Credit Top-Up.	
 
-- You can monitor your NTT Wallet balance and Gas Credit Wallet.
+**You can monitor your NTT Wallet balance and Gas Credit Wallet.**
 
 <br/>
 
 > [!Tip|style:flat]
 
-> **Reference: [Apply to get free NTT](../6GetNTT/6.md#1) in Get NTT.**
+> Reference: [**Apply to get free NTT**](../6GetNTT/6.md#1) in Get NTT.
 
-> **Reference: [Emergency Top-Up Gas Credit!](../4DataCenterRegistration/4.md#5) in Registrer Data Center**
+> Reference: [**Emergency Top-Up Gas Credit!**](../4DataCenterRegistration/4.md#5) in Registrer Data Center.
 
 
 <br/>
@@ -41,7 +44,7 @@ Make Gas Credit Top-Up for your users’ wallets.
 <br/>
 
 > [!Tip|style:flat]
-> **Reference: [Top-Up Gas Credit](../7GasCreditTop-up/7.md).**
+> Reference: [**Top-Up Gas Credit**](../7GasCreditTop-up/7.md).
 
 
 <br/>
@@ -51,12 +54,14 @@ Make Gas Credit Top-Up for your users’ wallets.
 
 Establish a new Spartan-I Chain (Powered by NC Ethereum) node.
 
+
 <br/>
 
-**Download here:**
+> [!Tip|style:flat]
 
->- [Source code](https://github.com/BSN-Spartan/NC-Ethereum)
->- [Binary Package](https://github.com/BSN-Spartan/NC-Ethereum)
+> Download the binary package and source code from [**here**](https://github.com/BSN-Spartan/NC-Ethereum).
+
+> Reference: [**Installation**](https://spartan.bsn.foundation/static/quick-start/4learnNon-CryptocurrencyPublicChains/4-1.html#2) in Spartan-I Chain (Powered by NC Ethereum).
 
 
 
@@ -69,10 +74,13 @@ Establish a new Spartan-II Chain (Powered by NC Cosmos) node.
 
 <br/>
 
-**Download here:**
 
->- [Source code](https://github.com/BSN-Spartan/NC-Cosmos)
->- [Binary Package](https://github.com/BSN-Spartan/NC-Cosmos)
+> [!Tip|style:flat]
+
+> Download the binary package and source code from [**here**](https://github.com/BSN-Spartan/NC-Cosmos).
+
+> Reference: [**Installation**](https://spartan.bsn.foundation/static/quick-start/4learnNon-CryptocurrencyPublicChains/4-2.html#2) in Spartan-II Chain (Powered by NC Cosmos).
+
 
 
 <br/>
@@ -82,12 +90,14 @@ Establish a new Spartan-II Chain (Powered by NC Cosmos) node.
 
 Establish a new Spartan-III Chain (Powered by NC PolygonEdge) node.
 
+
 <br/>
 
-**Download here:**
+> [!Tip|style:flat]
 
->- [Source code](https://github.com/BSN-Spartan/NC-PolygonEdge)
->- [Binary Package](https://github.com/BSN-Spartan/NC-PolygonEdge)
+> Download the binary package and source code from [**here**](https://github.com/BSN-Spartan/NC-PolygonEdge).
+
+> Reference: [**Installation**](https://spartan.bsn.foundation/static/quick-start/4learnNon-CryptocurrencyPublicChains/4-3.html#2) in Spartan-III Chain (Powered by NC PolygonEdge).
 
 
 
