--- a/src/main/webapp/static/book/10FAQs/10.md
+++ b/src/main/webapp/static/book/10FAQs/10.md
@@ -7,8 +7,8 @@
 
 Find answers and solutions for commonly seen errors and areas of confusion within our curated series of FAQ articles.
 
-Don't see your question answered here? Then please [contact us](https://spartan.bsn.foundation).
 
+Don't see your question answered here? Then please [contact us](https://spartan.bsn.foundation).
 
 <br/>
 
@@ -18,12 +18,10 @@ Don't see your question answered here? Then please [contact us](https://spartan.
 
 Data center management system needs to interact with the Default Chain (SpartanI) in order to obtain data directly from chain, and the node is the key to access the chain. Please make sure this node is successfully deployed before deploying the data center management system.
 
-
 <br/>
 
-## <font color=Black><span id="3">What is an NTT?</span></font>
+## <font color=Black><span id="3">What is an NTT? </span></font>
 ---
-
 
 A Non-Tradable Token (NTT) is a digital token that is issued on the default chain of the BSN Spartan Network. Each BSN Spartan data center has only one registered NTT wallet to manage and hold NTT, which can be purchased with fiat currency or designated stablecoins or acquired through incentive programs. NTT can be used to purchase Gas Credits on any NC Public Chain of the BSN Spartan Network. NTT can neither be traded nor transferred between data centers.
 
@@ -32,20 +30,12 @@ A Non-Tradable Token (NTT) is a digital token that is issued on the default chai
 ## <font color=Black><span id="4">What is an NTT Wallet?</span></font>
 ---
 
-
+ 
 As a special Default Chain wallet, the NTT Wallet refers to the only wallet address owned by the Virtual Data Center operator on the BSN Spartan Network, which can be used to purchase Gas Credits with NTT or receive NTT incentives.
 
 <br/>
 
-## <font color=Black><span id="5">What is a Mnemonic?</span></font>
----
-
-
-Mnemonics can help you recover the private key.Never disclose your mnemonic to others. Anyone with your mnemonic can completely control your NTT Wallet. Write this mnemonic on a piece of paper and keep it safe. If you want even more security, write it down on multiple pieces of paper and store each in 2 - 3 different locations.
-
-<br/>
-
-## <font color=Black><span id="6">What is a Wallet Address?</span></font>
+## <font color=Black><span id="5">What is a Wallet Address?</span></font>
 ---
 
 
@@ -53,7 +43,7 @@ In Spartan Non-Cryptocurrency Public Chains, an Wallet Address is a Gas Credit r
 
 <br/>
 
-## <font color=Black><span id="7">Why Private Key Configuration is required?</span></font>
+## <font color=Black><span id="6">Why Private Key Configuration is required?</span></font>
 ---
 
 
@@ -61,33 +51,30 @@ The private key is usually a sequence of 64-bit hexadecimal numbers which is use
 
 <br/>
 
-## <font color=Black><span id="8">What is a Private Key?</span></font>
+## <font color=Black><span id="7">What is a Private Key?</span></font>
 ---
-
 
 A private key is a secret number that is used in cryptography, similar to a password. In cryptocurrency, private keys are also used to sign transactions and prove ownership of a blockchain address.
 
 <br/>
 
-## <font color=Black><span id="9">What is a Virtual Data Center?</span></font>
+## <font color=Black><span id="8">What is a Virtual Data Center?</span></font>
 ---
 
 
-A Virtual Data Center is a set of locally installed software systems that contains one or more registered full nodes of different NC Public Chains. Each Virtual Data Center has one NTT wallet and is eligible to receive Node Establishment and Data Center Monthly Incentives.
+A Virtual Data Center is a set of locally installed software systems that contains one or more registered full nodes of different NC Public Chains. Each Virtual Data Center has one NTT wallet and is eligible to receive Node Establishment and Data Center Monthly Incentives. 
 
 <br/>
 
-## <font color=Black><span id="10">What is the Node Establishment Incentive Program?</span></font>
+## <font color=Black><span id="9">What is the Node Establishment Incentive Program?</span></font>
 ---
 
-
-When a new node accesses the BSN Spartan Network, a fixed amount of NTT will be given to the Data Center as an incentive, depending on the number of new nodes needed by a given chain. If the incentive amount for a given Non-cryptocurrency Public Chain needs to be changed, a consensus vote will be initiated. The incentive amount will be updated if a certain percentage of consensus parties agree. These incentive NTT will be directly minted to the NTT Wallet of the data center.
+When a new node successfully registered to the BSN Spartan Network, a fixed amount of NTT will be given to the Data Center as an incentive. If the incentive amount for a given Non-cryptocurrency Public Chain needs to be changed, a consensus vote will be initiated. The incentive amount will be updated if a certain percentage of consensus parties agree. These incentive NTT will be directly minted to the NTT Wallet of the data center.
 
 <br/>
 
-## <font color=Black><span id="11">What is the Data Center Monthly Incentive Program?</span></font>
+## <font color=Black><span id="10">What is the Data Center Monthly Incentive Program?</span></font>
 ---
-
 
 For Spartan, as an infrastructure network, its task is to provide Data Center users with infrastructure that can carry their own services. The only criterion for measuring whether Spartan is doing well or not is how many services are based on it. Therefore, Spartan needs a mechanism to motivate more Data Centers to use it to complete more practical services.
 
@@ -129,40 +116,49 @@ For Spartan, as an infrastructure network, its task is to provide Data Center us
 > [!danger|style:flat]
 > ***<font color=red>The value of Nodesubsidy is based on the number of nodes that the Data Center is running, and the nodes' health status.***
 
-<br/>
-
-## <font color=Black><span id="12">Why Data Center ID and Token Configuration is required?</span></font>
----
-
-The user’s Data Center ID and Token will be required when the Data Center Management System interacts with the Data Center management contracts on the Default Chain.
 
 <br/>
 
-## <font color=Black><span id="13">What is the Gas Credit?</span></font>
+## <font color=Black><span id="11">Why Data Center ID and Token Configuration is required?</span></font>
 ---
+
+
+The user’s Data Center ID and Token will be required when the Data Center Management System interacts with the Data Center management smart contracts on the Default Chain. And it will be also required for calling some Spartan official smart contracts.
+
+<br/>
+
+## <font color=Black><span id="12">What is the Gas Credit?</span></font>
+---
+
 
 In a similar fashion to cryptocurrencies, Gas Credits are used as a means of paying the Gas fee on NC Public Chains. However, Gas Credits cannot be transferred between standard wallets. Only the data center operator 's NTT wallet can be used to purchase Gas Credits with NTT.
 
 <br/>
 
-## <font color=Black><span id="14">How Emergency Gas Credit Recharge Works?</span></font>
+## <font color=Black><span id="13">How Emergency Gas Credit Top-Up Works?</span></font>
 ---
 
-When your NTT Wallet balance cannot complete a normal Top-up transaction, you can use the Emergency Gas Credit Top-up to consume your NTT to Top-up the Gas Credit of your NTT Wallet once. Note that this function can only be used when your NTT Wallet’s Gas Credit balance is less than the amount of Gas Credit equivalent to 0.03 NTT, and there are restrictions on the frequency of use. When using this function, you need to submit your signed information to the corresponding page of the Spartan official portal. Your private key management and the entire signing process are completed locally.
+
+When your NTT Wallet balance cannot complete a normal Top-up transaction, you can use the Emergency Gas Credit Top-up to consume your NTT to Top-up the Gas Credit of your NTT Wallet once. Instead of using the Gas Credit of the given NTT wallet, emergency gas credit top-up will use a wallet top-uped in advance by the foundation to pay for the Gas Credit required for the transaction. *<font color=red>So there are restrictions on the frequency of use and it can be only use to top-up the given NTT Wallet itself.</font>*
 
 <br/>
 
-## <font color=Black><span id="15">What is the Node Registration Test?</span></font>
+## <font color=Black><span id="14">What is the Node Registration Test?</span></font>
 ---
 
-Register the node to the NTT economic system. After registration, the Data Center to which the node belongs will receive incentives from the NTT economic system, and the node status can also be monitored through the Data Center Management System.
+
+The Spartan Governance System will send multiple requests at fixed intervals to the testing node to query the current block height. If the difference between the block height information returned by the node and the consensus block height is less than a certain range, then the node will pass the test. If after a certain number of requests, the block height information returned by the node still has a large gap with the consensus block height, then the test will fail.
 
 <br/>
 
-## <font color=Black><span id="16">Does the data center management system collect user data?</span></font>
+## <font color=Black><span id="15">Does the data center management system collect user data?</span></font>
 ---
 
 The Data Center Management System will not collect any information and data of users in any way. All the information configured by the user is stored locally, all data exchange behaviors of the Data Center Management System are directly interacted with the chain, the submitted data will be directly uploaded to the chain, and the data used for display is obtained by parsing events from the chain or from local database. Data Center Management System are open source, and users can compile and deploy the system by themselves.
+
+
+
+
 
 
 <br/>
