--- a/src/main/webapp/static/book/1DefaultChainDeployment/1.md
+++ b/src/main/webapp/static/book/1DefaultChainDeployment/1.md
@@ -1,20 +1,18 @@
-# <font color=Black>Deploy Full Node of Default Chain (Spartan-I Chain) </font>
+# <font color=Black>Deploy Full Node of Default Chain (Spartan-I Chain)</font>
 
 
 A full node is required to provide interaction with the Default Chain of Spartan Network (Spartan-I Chain), otherwise your local Data Center Management System cannot access the data on Spartan Network and cannot submit transactions.
 
 
-To become a Data Center you need to install the node in your local system first.
+To install the node, you need to get the deploy resources first.
 
+<br/>
 
+> [!Tip|style:flat]
 
-**Download here:**
+> - Download the binary package and source code from [**here**](https://github.com/BSN-Spartan/NC-Ethereum).
 
->- [Source code](https://github.com/BSN-Spartan/NC-Ethereum)
->- [Binary Package](https://github.com/BSN-Spartan/NC-Ethereum)
-
-
-
+> - You can get more detailed installation steps in section: [**Installation**](https://spartan.bsn.foundation/static/quick-start/4learnNon-CryptocurrencyPublicChains/4-1.html#2) in Spartan-I Chain (Powered by NC Ethereum).
 
 
 
