--- a/src/main/webapp/static/book/2DataCenterDeployment/2.md
+++ b/src/main/webapp/static/book/2DataCenterDeployment/2.md
@@ -1,10 +1,14 @@
-# <font color=Black>Deploy Data Center Management System</font>
+# <font color=Black>Deploy the Data Center Management System</font>
 
-This local system will help you manage your data center, and can easily manage your nodes and NTT business.
 
-> [!Tip|style:flat]
+This local system will help you to manage your data center, such daily works like nodes monitoring and Gas Credit top-up could be done easily by using this system. 
 
-> <font color=red>All data directly interacts with Spartan Non-Cryptocurrency Public.</font>
+
+
+> [!Tip]
+
+> <font color=red>The Data Center Management System are directly interacted with the chain, the submitted data will be directly uploaded to the chain, and the data used for display is obtained by parsing events from the chain or from local database.</font>
+
 
 
 <br/>
@@ -13,7 +17,7 @@ This local system will help you manage your data center, and can easily manage y
 ---
 
 ### <font color=Black>Prerequisites</font>
----
+
 
 - Java 1.8 or later
 
@@ -27,12 +31,12 @@ This local system will help you manage your data center, and can easily manage y
 <br/>
 
 ### <font color=Black>Database</font>
----
+
 
 #### <font color=Black>Create the database</font>
 
 
-1. [Get the mysql script from](https://github.com/BSN-Spartan/Data-Center-System)
+1. Get the mysql script from [**here**](https://github.com/BSN-Spartan/Data-Center-System/blob/main/src/main/resources/sql/v1.0/bsn_spartan_dc.sql)
 
 2. Create the database
 
@@ -43,126 +47,135 @@ This local system will help you manage your data center, and can easily manage y
 3. Execute mysql script to initialize the table
 
      ```sql
-    use [db_name]; 
-
-    # Execute sql
+    use [db_name];  
 
    ```
+   Then execute the rest commands in sequence.
 
 <br/>
 
-### <font color=Black>Management System Configuration</font>
+## <font color=Black>Download and Configuration</font>
 ---
+
+### <font color=Black>Download Package and Source Code</font>
+
+
+Download the package and source code of the Data Center System from [**here**](https://github.com/BSN-Spartan/Data-Center-System/releases/tag/v1.0.0).
+
+
+### <font color=Black>Download YAML Files</font>
+
+
+Download the YAML files from [**here**](https://github.com/BSN-Spartan/Data-Center-System/tree/main/src/main/resources).
+
+
+### <font color=Black>Edit Files</font>
+
 
 #### <font color=Black>Edit `application.yml`</font>
 
-
 - **Change the default login account**
 
-  `If the database has never been initialized with any account, the service will be initialized with this information when it is first started.`
+If the database has never been initialized with any account, the service will be initialized with this information when started.
 
-  ```yml
-  system:
-    adminName: admin
-    adminEmail: admin@reddatetech.com
-    defaultPassword: 888888
-
-  ```
+```yml
+ system:
+  	adminName: [username]
+  	adminEmail: [admin@email.com]
+  	defaultPassword: [password]
+```
 
 #### <font color=Black>Edit `application-prod.yml`</font>
 
-
 - **Configure the data source**
-
-  ```yml
-  mysql:
+```yml
+mysql:
+  # Specity the IP address, port number and the name of your database
   write_url: jdbc:mysql://[database-IP]:[port]/[db_name]?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&allowMultiQueries=true&useSSL=false
-  write_username: db_username
-  write_password: db_password
+  # Enter the username
+  write_username: [db_username]
+  # Enter the password
+  write_password: [db_password]
+  # Specity the IP address, port number and the name of your database
   read_url: jdbc:mysql://[database-IP]:[port]/[db_name]?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=UTC&allowMultiQueries=true&useSSL=false
-  read_username: db_username
-  read_password: db_password
+  # Enter the username
+  read_username: [db_username]
+  # Enter the password
+  read_password: [db_password]
+```
 
-  ```
 
 - **Configure the node information**
+```yml
+chain:
+  # Node's JSON-RPC interface of the default chain
+  nodeRpcAddress: "http://[node-IP]:[node-rpc-port]"
+  # Default chain's netWork ID, do not change this parameter
+  chainId: 9090
+  # Query the transaction pool's waiting time: millisecond, recommended 1.5 seconds
+  txPoolSleep: 1500
+  # Path of the Keystore file
+  walletFilePath: "[your-directory]/wallet"
+  # After the system started, the event parsing can be started from this block height. This number can be determined based on the latest block height before the system started.
+  blockHeight: [10000]
+```
 
-  ```yml
-  chain:
-    # Node's gsonRpc interface of the default chain 
-    nodeRpcAddress: "http://[127.0.0.1]:8545"
-    # Default chain's netWork ID
-    chainId: 8888
-    # Query the transaction pool's waiting time: millisecond, recommended 1.5 seconds
-    txPoolSleep: 1500
-    # Path of the Keystore file 
-    walletFilePath: "src/main/resources/wallet"
-
-  ```
-
-- **Configure the task time**
-
-  ```yml
-  task:
+- **Configure the task time, in the Cron time string format**
+```yml
+task:
   # Whether to start a timed task to submit a transaction/time parse
   enabled: false
   # Parse event
   eventAnalytics: "0/2 * * * * ?"
-  # Submit Gas Credit top-up transaction 
+  # Submit Gas Credit top-up transaction
   gasRechargeSubmit: "0/10 * * * * ?"
   # Query Gas Credit top-up result
   gasRechargeResult: "0/10 * * * * ?"
   # Submit node registration application
   nodeUpChain: "0/10 * * * * ?"
-  # Query transaction status 
+  # Query transaction status
   checkTxStates: "0/10 * * * * ?"
+  # Query gas price
+  chainGasPrice: "0/60 * * * * ?"
+```
 
-  ```
-
-- **Configure the effective time period of emergency NTT top-up**
-
-  ```yml
-  metaTx:
-    # Only used by the default chain, do not change this configuration
-    chainId: 1
-    # Effective time period, in hour
-    deadline: 12
-    # Do not change this configuration
-    domainSeparator: "0xd4040b06a739f7fde202fb8503cffd1cb92d5ff5812ce9a4adf602c464a1f0f5"
-    # Do not change this configuration
-    metaTransferTypeHash: "0xbf13ac0a2964a57037372fadd1f7b4fa6785ffdc315c85dfe8d1f9b1b01a7a51"
-
-  ```
-
-<br/>
-
-### <font color=Black>Deployment Package</font>
----
-
-**Download the latest service package or source code:**
-
-- Download the package: [Binary Package](https://github.com/BSN-Spartan/Data-Center-System)
-
-- Download the source code: [Source code](https://github.com/BSN-Spartan/Data-Center-System)
-
-    
-<br/>
-
-### <font color=Black>Start the Service</font>
----
-
-- **Start by jar**
-
- ```yml
-  nohup java -jar spartan_dc-0.0.1-SNAPSHOT.jar --spring.config.location=./conf/application.yml --spring.config.location=./conf/application-dev.yml --logging.config=./conf/logback-spring.xml - LANG=zh_CN.UTF-8 &
-  ```
-
-- **Start by Docker**
-
-`The container is "/bsn/spartan-dc" and the service working directory can be configured by the data center operator.`
+- **Configure the effective time period of emergency Gas Credit top-up**
 ```yml
-  version: "3"
-  services:
+metaTx:
+  # Only used by the default chain, do not change this configuration
+  chainId: 1
+  # Effective time period, in hour
+  deadline: 12
+  # Do not change this configuration
+  domainSeparator: "0x9d5e39915081369daa50abc8dc23f93c9c174abc4fc01efd13e3660e5d080276"
+  # Do not change this configuration
+  metaTransferTypeHash: "0xbf13ac0a2964a57037372fadd1f7b4fa6785ffdc315c85dfe8d1f9b1b01a7a51"
+```
+
+<br/>
+
+## <font color=Black>Start the Service</font>
+---
+
+### <font color=Black>Start by Package</font>
+
+
+
+Put `Data-Center-System-0.0.1-SNAPSHOT.jar` package, `application.yml` and `application-prod.yml` files into the same directory and run the command below:
+
+```yml
+nohup java -jar Data-Center-System-0.0.1-SNAPSHOT.jar --spring.config.location=./application.yml --spring.config.location=./application-prod.yml --logging.config=./logback-spring.xml - LANG=zh_CN.UTF-8 >/dev/null 2>&1 &
+```
+
+### <font color=Black>Start by Docker</font>
+
+
+The container is `/bsn/spartan-dc` and the service working directory can be configured by the data center operator.
+
+
+```yml
+version: "3"
+services:
   nodeManager:
     image: oracle-jdk11
     container_name: spartan-dc
@@ -172,7 +185,7 @@ This local system will help you manage your data center, and can easily manage y
     ports:
       - "8085:8085"
     volumes:
-      - ./spartan_dc-0.0.1-SNAPSHOT.jar:/bsn/spartan-dc/spartan_dc-0.0.1-SNAPSHOT.jar
+      - ./Data-Center-System-0.0.1-SNAPSHOT.jar:/bsn/spartan-dc/Data-Center-System-0.0.1-SNAPSHOT.jar
       - ./conf:/bsn/spartan-dc/conf
       - ./logs/:/bsn/spartan-dc/logs
       - ./wallet:/bsn/spartan-dc/src/main/resources/wallet
@@ -181,20 +194,10 @@ This local system will help you manage your data center, and can easily manage y
     environment:
       # Specify the time zone
       - TZ=Asia/Shanghai
-    entrypoint: java -jar spartan_dc-0.0.1-SNAPSHOT.jar --spring.config.location=./conf/application.yml --spring.config.location=./conf/application-prod.yml --logging.config=./conf/logback-spring.xml - LANG=zh_CN.UTF-8
+    entrypoint: java -jar Data-Center-System-0.0.1-SNAPSHOT.jar --spring.config.location=./conf/application.yml --spring.config.location=./conf/application-prod.yml --logging.config=./conf/logback-spring.xml - LANG=zh_CN.UTF-8
 ```
-  
 
 
-
-
-
-
-
-
-<br/>
-<br/>
-<br/>
 
 
 
