--- a/src/main/webapp/static/book/4DataCenterRegistration/4.md
+++ b/src/main/webapp/static/book/4DataCenterRegistration/4.md
@@ -1,94 +1,128 @@
 # <font color=Black>Register Data Center</font>
 
 
-Go to the Spartan Foundation Portal to register as an data center, you will get your unique Data Center ID and Data Center Token, which will secure your business security and provide you with incentives from the NTT economic system.	
+Go to the Spartan Foundation Portal for Data Center Registration, and after that, you will get your unique Data Center ID and Data Center Token, which will allow your to call the Data Center management smart contracts and the Spartan official smart contracts, meanwhile, this also gives you the right to get the incentive mechanism of the NTT economic system.	
+
 
 <br/>
 
-## <font color=Black><span id="1">Initiate the Application</span></font>
+## <font color=Black><span id="1">nitiate the Application</span></font>
 ---
+
+## <font color=Black>**Operation Steps:**</font>
+
+Visit https://spartan.bsn.foundationand and click **"Join Spartan"** to register as an data center.
 	
-Visit https://spartan.bsn.foundationand select "Join Spartan" to register as an data center.
 
 <img src='img/InitiatetheApplication.png' style='width:600px;' alt='InitiatetheApplication' title='InitiatetheApplication'>
 
 
 - Enter your NTT Wallet address;
 
-- Double check your NTT Wallet address;
+- Confirm your NTT Wallet address;
+
 
 > [!note]
-> ***<font color=red>Please make sure the wallet address you entered is correct, it will be your unique data center wallet to manage your NTT assets!</font>***
+> ***<font color=red>Please make sure the wallet address you entered is correct, it will become your unique NTT wallet to manage your NTT assets!</font>***
 
-- Enter an email address;
+<br/>
+
+- Enter an email address; 
+
 
 > [!note]
-> ***<font color=red>The Governance System will send important information such as official business notices to this Email address, please ensure that you can obtain relevant information!</font>***
+> ***<font color=red>The Spartan Governance System will send important information such as official business notices to this Email address, please ensure that you can obtain relevant information!</font>***
 
+<br/>
 
-- Check your mailbox for a verification message with a one-time verification code;
+- Check your mailbox for a verification mail with a one-time verification code;
 
 - Enter the verification code and click **"Confirm"** button.
 
-- You will be notified by email after the Governance System complete the registration process.
+- You will be notified by email after the Spartan Governance System complete the registration process.
 
 
 <br/>
 
-## <font color=Black><span id="2">Check the email of the Notification of your application</span></font>
+## <font color=Black><span id="2">Check the email of the Notification of Data Center Registration</span></font>
 ---
 
-The whole process could take a while because it needs to upload your registration information to the chain. After completion, we will send you an email to notify you of the registration result. If the registration is successful, the email will inform you with your Data Center ID and Token.
+The whole process could take a while because it needs to upload your registration information to the chain. After completion, we will send you an email to notify you of the registration result. If the registration is successful, the email will inform you with your Data Center ID and Token.	
+
 
 <br/>
 
 ## <font color=Black><span id="3">Data Center ID and Token Configuration</span></font>
 ---
 
-Your Data Center ID and Token will be used when the Data Center Management System interacts with the Spartan official contracts on the Default Chain.
 
-**Log in to the BSN Spartan Data Center Software, click on "Configuration" on the panel and open the page:**
+Your Data Center ID and Token will be used when the Data Center Management System interacts with the Spartan official contracts on the Default Chain and when you call the Data Center management smart contracts and the Spartan official smart contracts.
+
+### <font color=Black>Operation Steps:</font>
+
+
+**Click "Configuration" on the panel to enter the page:**
+
+
 
 <img src='img/DataCenterIDandTokenConfiguration.png' style='width:600px;' alt='DataCenterIDandTokenConfiguration' title='DataCenterIDandTokenConfiguration'>
 
-- Enter the email address you filled in when you registered;
+- Enter the same email address that you submitted when you did the Data Center registration;
 
-- Enter your Data Center ID got from the notification email of Data Center registration；
+- Enter the Data Center ID which is got from the notification email of Data Center registration；
 
-- Data Center Token got from the notification email of Data Center registration；
+- Enter the Data Center Token which is got from the notification email of Data Center registration；
 
-- Enter your NTT Wallet;
+- Enter your NTT Wallet address;
+
 
 > [!note]
-> ***<font color=red>TPlease make sure the wallet address you entered is correct, it will be your unique data center wallet to manage your NTT assets!</font>***
+> ***<font color=red>Please make sure the wallet address you entered is correct, it will be your unique data center wallet to manage your NTT assets!</font>***
+
+<br/>
 
 - Click **"Save"** button.
 
-Now you have configured the registration information to your local server.
+Now you have configured the registration information to your local system.
 
 
 > [!danger|style:flat]
-> ***<font color=red>The above information is configured locally, and we will not obtain any information from you in any form!***
+> ***<font color=red>The above information is configured locally, and we will not obtain any information from you in any form!</font>***
+
 
 <br/>
 
 ## <font color=Black><span id="4">Check Your Gas Credit Balance</span></font>
 ---
 	
-After successfully registration, we will send 1NTT worth of Gas Credit to your NTT Wallet, so that your NTT Wallet has the basic conditions to interact with the Default Chain. Normally your NTT Wallet will receive it within 30 minutes. Please make sure that the Gas Credit balance of your NTT Wallet is higher than the amount required to complete at least one Gas Credit Top-up, otherwise your NTT Wallet will not be able to initiate transactions normally.
+	
+After successfully registration, we will send 1NTT worth of Gas Credit to your NTT Wallet, so that your NTT Wallet has reach the basic requirement to interact with the Default Chain. Normally your NTT Wallet will receive it within 30 minutes. 
 
-**Log in to the BSN Spartan Data Center Software, click on "Home" on the panel and open the page:**
+
+Please make sure that the Gas Credit balance of your NTT Wallet is higher than the amount required to complete at least one Gas Credit Top-up, otherwise your NTT Wallet will not be able to initiate transactions normally. If this is really your situation, use Emergency Gas Credit Top-Up to solve the problem.
+
+
+### <font color=Black>Operation Steps:</font>
+
+
+**Click "Home" on the panel to enter the page:**
 
 <img src='img/GasCreditBalance.png' style='width:600px;' alt='GasCreditBalance' title='GasCreditBalance'>
 
 <br/>
 
-## <font color=Black><span id="5">2.1.4.5 Emergency Top-Up Gas Credit! (Opentional)</span></font>
+## <font color=Black><span id="5">Emergency Gas Credit Top-Up! (For Emergency Only)</span></font>
 ---
 
+	
 When your NTT Wallet balance cannot complete a normal Top-up transaction, you can use the Emergency Gas Credit Top-up to consume your NTT to Top-up the Gas Credit of your NTT Wallet once. Note that this function can only be used when your NTT Wallet’s Gas Credit balance is less than the amount of Gas Credit equivalent to 0.03 NTT, and there are restrictions on the frequency of use. When using this function, you need to submit your signed information to the corresponding page of the Spartan official portal. Your private key management and the entire signing process are completed locally.
 
-**Log in to the BSN Spartan Data Center Software, click on "Home" on the panel and open the page:**
+
+### <font color=Black>Operation Steps:</font>
+
+
+**Click "Home" on the panel to enter the page:**
+
 
 <img src='img/Emergency1.png' style='width:600px;' alt='Emergency1' title='Emergency1'>
 
@@ -96,19 +130,26 @@ When your NTT Wallet balance cannot complete a normal Top-up transaction, you ca
 
 <img src='img/Emergency2.png' style='width:600px;' alt='Emergency2' title='Emergency2'>
 
-- Confirm NTT Wallet address , enter the amount of Gas Credit for top-up;
+- Confirm NTT Wallet address;
+
+- Enter the amount of Gas Credit to top-up;
 
 - Enter Keystore Password;
 
-- Click **"Sign".**
+- Click **"Sign"**;
 
-Verify the signature information on the page, click submit, and jump to the foundation website, enter the signature value generated in the signature information.
+- Verify the signature information on the page;
+
+- Click **"Submit"**, and jump to the foundation website;
+
+- Enter all the values, most of them can be found in the signature information.
+
 
 
 <img src='img/Emergency3.png' style='width:600px;' alt='Emergency3' title='Emergency3'>
 
-> [!note|style:flat]
->**Please make sure that the information entered above is consistent with the information generated as signature information in your data center system. Otherwise, the transaction will not be successful.**
+> [!note]
+> ***<font color=red>Please make sure that the information entered above is consistent with the information generated as signature information in your data center system. Otherwise, the transaction will not be successful.</font>***
 
 
 
