--- a/src/main/webapp/static/book/4DataCenterRegistration/4.md
+++ b/src/main/webapp/static/book/4DataCenterRegistration/4.md
@@ -6,7 +6,7 @@ Go to the Spartan Foundation Portal for Data Center Registration, and after that
 
 <br/>
 
-## <font color=Black><span id="1">nitiate the Application</span></font>
+## <font color=Black><span id="1">Initiate the Application</span></font>
 ---
 
 ## <font color=Black>**Operation Steps:**</font>
